# radicant-de-challenge

./: README.md  pyproject.toml  script_fill_table.py
.github/workflows/: push.yml
data/: ETFs.csv
db/: radicant_challenge.db
infra/: main.tf  versions.tf
src/api/: app.py  utils.py
src/models/: BaseModel.py  ESGFund.py  UserPreferences.py
tests/: test_utils.py
