[tool.poetry]
name = "radicant-de-challenge"
version = "0.1.0"
description = ""
authors = ["Pedro Ascensao <rafascen@gmail.com>"]
packages = [
    { include = "api", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"
psycopg2 = "^2.9.3"
peewee = "^3.15.1"
pandas = "^1.4.3"
pydantic = "^1.9.2"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.api.app:start"
